Fixed minor spacing issue on month/year picker.

--- a/scss/global.scss
+++ b/scss/global.scss
@@ -205,7 +205,7 @@ input.ng-touched.ng-invalid {
 		display: block;
 		width: 100%;
 		height: 3em;
-		line-height: 1em;
+		line-height: 1.1em;
 		border: 1px solid $btn-default-border-color;
 		border-radius: 0;
 		cursor: pointer;
